@@ -231,10 +231,11 @@ game_controller::game_controller(int argc, char** argv)
 		}
 	}
 
-	if (preferences::sound_on() || preferences::music_on()) {
+	if (preferences::sound_on() || preferences::music_on() || preferences::turn_bell()) {
 		if(!sound::init_sound()) {
 			preferences::set_sound(false);
 			preferences::set_music(false);
+			preferences::set_turn_bell(false);
 		}
 	}
 }
