@@ -29,6 +29,7 @@ void close_sound();
 
 void stop_music();
 void stop_sound();
+void stop_bell(); 
 
 // Read config entry, alter track list accordingly.
 void play_music_config(const config &music);
@@ -47,6 +48,9 @@ void play_music();
 // Play sound, or random one of comma-separated sounds.
 void play_sound(const std::string& files);
 
+// Play sound, or random one of comma-separated sounds in bell channel
+void play_bell(const std::string& files);
+
 // Called from event loop to see if we need new music track.
 void think_about_music(void);
 
@@ -55,6 +59,7 @@ void write_music_play_list(config& snapshot);
 
 void set_music_volume(int vol);
 void set_sound_volume(int vol);
+void set_bell_volume(int vol);
 
 }
 
