@@ -15,6 +15,8 @@ Version 1.3-svn:
    * unit Art
      * added a recruit animation to the skeleton
  * user interface
+ 	* turn bell moved to sound tab in prefereces
+	* new slider - bell volume
    * disable inactive sliders instead of hiding them
    * sliders can be adjusted with keyboard left and right
    * sidebar reports related to gold, units, villages and time get greyed out
